# 04_cube_imu_data_capture

./: .gitignore  Makefile  README.md
Log/: OrbbecSDK.log.txt
configs/: capture.yaml
cube_imu_calibration/: CMakeLists.txt  README_JAZZY.txt  package.xml
cube_imu_calibration/config/: apriltag_params.yaml
cube_imu_calibration/launch/: calibration_launch.py  gui_launch.py  runtime_launch.py  sim_demo_launch.py
cube_imu_calibration/msg/: CubePose.msg  CubePoseStatus.msg
cube_imu_calibration/src/: apriltag_pose_node.cpp  data_recorder_node.cpp  direct_sensor_reader.cpp  real_sensor_node.cpp  serial_imu_reader.cpp  serial_imu_reader.hpp  simulated_sensor_node.cpp
cube_imu_calibration/src/scripts/: calibration_gui.py  kalibr_workflow_check.py  pose_imu_calibrator.py
docs/: 01_数据采集方案优化.md  AGENT_WORKFLOW.md  DATA_CONTRACT.md  DELIVERY_CHECKLIST.md  PROJECT_FLOW.md  STANDARD_FLOW.md  交付检查清单.md  多智能体作业规范.md  工程顺序流规范.md  数据契约.md  标准采集流程.md
install/: local_setup.sh  setup.sh
install/cube_imu_calibration/include/cube_imu_calibration/cube_imu_calibration/msg/: cube_pose.h  cube_pose.hpp  cube_pose_status.h  cube_pose_status.hpp  recorder_status.h  recorder_status.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/cube_imu_calibration/include/cube_imu_calibration/cube_imu_calibration/msg/detail/: cube_pose__builder.hpp  cube_pose__description.c  cube_pose__functions.c  cube_pose__functions.h  cube_pose__rosidl_typesupport_fastrtps_c.h  cube_pose__rosidl_typesupport_fastrtps_cpp.hpp  cube_pose__rosidl_typesupport_introspection_c.h  cube_pose__rosidl_typesupport_introspection_cpp.hpp  cube_pose__struct.h  cube_pose__struct.hpp  cube_pose__traits.hpp  cube_pose__type_support.c  (+33 more)
install/cube_imu_calibration/lib/cube_imu_calibration/: data_recorder_node  real_sensor_node  simulated_sensor_node  solve_extrinsics.py
install/cube_imu_calibration/share/ament_index/resource_index/package_run_dependencies/: cube_imu_calibration
install/cube_imu_calibration/share/ament_index/resource_index/rosidl_interfaces/: cube_imu_calibration
install/cube_imu_calibration/share/cube_imu_calibration/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/cube_imu_calibration/share/cube_imu_calibration/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  cube_imu_calibrationConfig.cmake  cube_imu_calibration__rosidl_typesupport_cExport-release.cmake  cube_imu_calibration__rosidl_typesupport_cExport.cmake  cube_imu_calibration__rosidl_typesupport_cppExport-release.cmake  cube_imu_calibration__rosidl_typesupport_cppExport.cmake  cube_imu_calibration__rosidl_typesupport_introspection_cExport-release.cmake  cube_imu_calibration__rosidl_typesupport_introspection_cExport.cmake  cube_imu_calibration__rosidl_typesupport_introspection_cppExport-release.cmake  cube_imu_calibration__rosidl_typesupport_introspection_cppExport.cmake  export_cube_imu_calibration__rosidl_generator_cExport-release.cmake  export_cube_imu_calibration__rosidl_generator_cExport.cmake  export_cube_imu_calibration__rosidl_generator_cppExport.cmake  export_cube_imu_calibration__rosidl_generator_pyExport-release.cmake  export_cube_imu_calibration__rosidl_generator_pyExport.cmake  export_cube_imu_calibration__rosidl_typesupport_fastrtps_cExport-release.cmake  export_cube_imu_calibration__rosidl_typesupport_fastrtps_cExport.cmake  export_cube_imu_calibration__rosidl_typesupport_fastrtps_cppExport-release.cmake  export_cube_imu_calibration__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/cube_imu_calibration/share/cube_imu_calibration/launch/: gui_launch.py
install/cube_imu_calibration/share/cube_imu_calibration/msg/: CubePose.idl  CubePose.json  CubePoseStatus.idl  CubePoseStatus.json  RecorderStatus.idl  RecorderStatus.json  RecorderStatus.msg
install/cube_imu_calibration/share/cube_imu_calibration/rust/: Cargo.toml
install/cube_imu_calibration/share/cube_imu_calibration/rust/src/: msg.rs
log/: latest_build
output_bag/: camera_info.yaml  image_timestamps.csv  metadata.yaml  tag_pose.csv
output_bag/images/: frame_000443.pgm  frame_000444.pgm  frame_000445.pgm  frame_000446.pgm  frame_000447.pgm  frame_000448.pgm  frame_000449.pgm  frame_000450.pgm  frame_000451.pgm  frame_000452.pgm  frame_000453.pgm  frame_000454.pgm  frame_000455.pgm  frame_000456.pgm  frame_000457.pgm  frame_000458.pgm  frame_000459.pgm  frame_000460.pgm  frame_000461.pgm  frame_000462.pgm  frame_000463.pgm  frame_000464.pgm  frame_000465.pgm  frame_000466.pgm  frame_000467.pgm  frame_000468.pgm  frame_000469.pgm  frame_000470.pgm  frame_000471.pgm  frame_000472.pgm  frame_000473.pgm  frame_000474.pgm  frame_000475.pgm  frame_000476.pgm  frame_000477.pgm  frame_000478.pgm  frame_000479.pgm  frame_000480.pgm  frame_000481.pgm  frame_000482.pgm  (+3340 more)
scripts/: check_capture_output.py  check_project.py  doctor.sh
(+1 files in other folders)
